--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-spider-typeorm",
-  "version": "0.0.1",
-  "description": "Awesome project developed with TypeORM.",
+  "name": "@boilerplate-scope/boilerplate-spider-typeorm",
+  "version": "1.0.0",
+  "description": "boilerplate-spider-typeorm-description",
   "devDependencies": {
     "@types/node": "^8.0.29",
     "ts-node": "3.3.0",
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "db:migrate": "npm run typeorm migration:run"
+    "db:migrate": "npm run typeorm migration:run",
+    "app:post": "ts-node src/app/post.ts"
   }
 }
