--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "typescript": "3.3.3333"
   },
   "dependencies": {
-    "typeorm": "0.2.29",
+    "@jswork/next": "^1.0.4",
     "reflect-metadata": "^0.1.10",
-    "sqlite3": "^4.0.3"
+    "sqlite3": "^4.0.3",
+    "typeorm": "0.2.29"
   },
   "scripts": {
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
