--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "boilerplate-spider-typeorm-description",
   "devDependencies": {
     "@types/node": "^8.0.29",
+    "npm-run-all": "^4.1.5",
     "ts-node": "3.3.0",
     "typeorm-naming-strategies": "^2.0.0",
     "typescript": "3.3.3333"
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "db:migrate": "npm run typeorm migration:run",
-    "app:post": "ts-node src/app/post.ts"
+    "app:post": "ts-node src/app/post.ts",
+    "db:migrate": "npm run typeorm migration:run"
   }
 }
