fix: setup with nx.require

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@jswork/next": "^1.0.4",
+    "@jswork/next-require": "^1.0.3",
     "reflect-metadata": "^0.1.10",
     "sqlite3": "^4.0.3",
     "typeorm": "0.2.29"
