--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@jswork/next": "^1.0.4",
+    "@jswork/next-dt-log": "^1.1.2",
     "@jswork/next-global": "^1.0.0",
     "@jswork/next-require": "^1.0.3",
     "@jswork/next-to-action": "^1.0.0",
