--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^8.0.29",
     "npm-run-all": "^4.1.5",
     "ts-node": "3.3.0",
+    "tsconfig-paths": "^3.10.1",
     "typeorm-naming-strategies": "^2.0.0",
     "typescript": "3.3.3333"
   },
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "app:post": "ts-node src/app/post.ts",
+    "app:post": "ts-node -r tsconfig-paths/register src/app/post.ts",
     "db:migrate": "npm run typeorm migration:run"
   }
 }
