--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/node": "^8.0.29",
     "npm-run-all": "^4.1.5",
+    "scripty": "^2.0.0",
     "ts-node": "3.3.0",
     "tsconfig-paths": "^3.10.1",
     "typeorm-naming-strategies": "^2.0.0",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "app:post": "ts-node -r tsconfig-paths/register src/app/post.ts",
+    "app:post": "scripty",
     "db:migrate": "npm run typeorm migration:run"
   }
 }
