--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "app:post": "scripty",
     "db:migrate": "npm run typeorm migration:run"
+  },
+  "scripty": {
+    "path": ".scripts"
   }
 }
